@@ -1,6 +1,6 @@
 
 HepMC::IO_ExtendedAscii-START_EVENT_LISTING
-E 9 51 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 309 0 0 0 0
+E 9 51 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 309 1 2 0 0
 H 0 0 0 0 0 0 0 0 0 0 0 0 0
 F 11 12 9.0000000000000002e-01 1.1699999999999999e+00 1.0800000000000000e-01 1.1000000000000000e-01 3.4000000000000002e-01
 V -1 0 0 0 0 0 1 3 0
@@ -1241,7 +1241,7 @@ P 927 -211 -9.0674855235478663e-02 -1.1538687304506388e-01 1.7884263157970235e+0
 P 928 211 7.0129833147545048e-02 2.5070985646634580e-01 1.5062193620399494e+01 1.5065089779650497e+01 1.3957000000000000e-01 1 0 0 0 0
 V -309 0 1.4093767723766790e-01 6.0129014232518174e-01 -1.9127429799834261e+00 2.0107608410113640e+00 0 1 0
 P 929 130 1.5144574134495588e+00 7.2590137012971407e+00 -2.3983943019256262e+01 2.5109043377886842e+01 4.9767000000000000e-01 1 0 0 0 0
-E 18 40 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 219 0 0 0 0
+E 18 40 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 219 1 2 0 0
 H 0 0 0 0 0 0 0 0 0 0 0 0 0
 F 0 0 0 0 0 0 0
 V -1 0 0 0 0 0 1 2 0
@@ -2137,7 +2137,7 @@ P 672 22 2.6194240863209987e-02 -4.5271171499734107e-02 -2.1983850377663518e-02 
 V -219 0 2.5678622015421473e+00 -1.7974403382515305e+00 -3.7897519685896702e+02 3.7902512065065866e+02 0 2 0
 P 673 -211 -6.7514417930739964e-02 -1.0120446765128294e-02 -1.8254475337189451e+01 1.8255136544025881e+01 1.3957000000000000e-01 1 0 0 0 0
 P 674 211 3.0894826880397325e-01 -1.5887730643141576e-01 -1.7377281346698286e+01 1.7381314041766348e+01 1.3957000000000000e-01 1 0 0 0 0
-E 56 41 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 267 0 0 0 0
+E 56 41 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 267 1 2 0 0
 H 0 0 0 0 0 0 0 0 0 0 0 0 0
 F 0 0 0 0 0 0 0
 V -1 0 0 0 0 0 1 3 0
