@@ -1,7 +1,8 @@
 
 2007-07-09  Lynn Garren
 
-	* src/IO_ExtendedAscii.cc: fix a problem with reading optional info
+	* src/IO_ExtendedAscii.cc: read/write beam particle information
+	  fix a problem with reading optional info
 	* test/testMass.*: compare generated and calculated masses
 
 2007-06-29  Lynn Garren
